@@ -1,6 +1,7 @@
 Revision history for Perl extension Alien::wxWidgets.
 
 0.66  TBR
+    - add support for and upate default to wxWidgets 3.0.1
 
 0.65  Mon Mar 31 2014
     - Update default to wxWidgets 3.0.0
